<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>by.juanjo</groupId>
    <artifactId>jitter</artifactId>
    <version>0.0.1</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>jitter-rest</artifactId>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <version.flyway-core>9.2.3</version.flyway-core>
    <version.flyway-mysql>9.2.3</version.flyway-mysql>
    <version.flyway-maven-plugin>10.11.0</version.flyway-maven-plugin>
    <version.spring-boot-starter-security>3.2.5</version.spring-boot-starter-security>
    <version.jitter-react-webui>0.0.1</version.jitter-react-webui>
    <version.jjwt>0.12.5</version.jjwt>
  </properties>

  <dependencies>
    <dependency>
      <groupId>by.juanjo</groupId>
      <artifactId>jitter-core</artifactId>
      <version>0.0.1</version>
    </dependency>
    <dependency>
      <groupId>by.juanjo</groupId>
      <artifactId>jitter-react-webui</artifactId>
      <version>${version.jitter-react-webui}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
      <version>${version.flyway-core}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-mysql</artifactId>
      <version>${version.flyway-mysql}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
      <version>${version.spring-boot-starter-security}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-mail</artifactId>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-api</artifactId>
      <version>${version.jjwt}</version>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>${version.jjwt}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-jackson</artifactId>
      <version>${version.jjwt}</version>
      <scope>runtime</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-maven-plugin</artifactId>
        <version>${version.flyway-maven-plugin}</version>
      </plugin>
    </plugins>
  </build>

</project>